✨ Pic 1690 - match multiple defendants (#300)
* ✨ PIC-1690: Add TODOs and update integration tests

* 🚧 PIC-1690: Add OffenderMatches to Defendant, post offender matches for all defendants at CourtCaseRepository

* 🔥 PIC-1690: Remove unused code and tests

* 💚 PIC-1690: Fix for nested integration tests not running in CircleCI

* 💚 PIC-1690: Prevent test failures in CI

* ✨ PIC-1690:
- ✨ Match all defendants for a case
- ♻️ Move matching logic into MatcherService
- 🔥 Remove redundant code

* ♻️ PIC-1690: Emit matching events to MatcherService

* ✨️ PIC-1690: For existing case get probationStatus for all defendants

* 📝️ PIC-1690: Address review comments