@@ -2,51 +2,39 @@ package uk.gov.justice.probation.courtcasematcher.model.domain;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
+import java.util.List;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 
 class CourtCaseTest {
 
     @Test
-    void givenOrg_whenShouldMatch_thenReturnFalse() {
+    void givenAnyDefendantShouldMatch_thenTrue() {
         CourtCase courtCase = CourtCase.builder()
-                .defendants(Collections.singletonList(Defendant.builder()
+                .defendants(List.of(Defendant.builder()
                         .type(DefendantType.ORGANISATION)
-                        .build()))
-                .build();
-        assertThat(courtCase.shouldMatchToOffender()).isFalse();
-    }
-
-    @Test
-    void givenMatchedPerson_whenShouldMatch_thenReturnFalse() {
-        CourtCase courtCase = CourtCase.builder()
-                .defendants(Collections.singletonList(Defendant.builder()
-                        .type(DefendantType.PERSON)
-                        .crn("X321567")
-                        .build()))
-                .build();
-        assertThat(courtCase.shouldMatchToOffender()).isFalse();
-    }
-
-    @Test
-    void givenSpacesOnlyInCrnPerson_whenShouldMatch_thenReturnTrue() {
-        CourtCase courtCase = CourtCase.builder()
-                .defendants(Collections.singletonList(Defendant.builder()
-                        .type(DefendantType.PERSON)
-                        .crn("   ")
-                        .build()))
+                        .build(),
+                        // This one should be matched
+                        Defendant.builder()
+                                .type(DefendantType.PERSON)
+                                .build()
+                ))
                 .build();
         assertThat(courtCase.shouldMatchToOffender()).isTrue();
     }
 
     @Test
-    void givenUnMatchedPerson_whenShouldMatch_thenReturnTrue() {
+    void givenNoDefendantsShouldMatch_thenFalse() {
         CourtCase courtCase = CourtCase.builder()
-                .defendants(Collections.singletonList(Defendant.builder()
-                        .type(DefendantType.PERSON)
-                        .build()))
+                .defendants(List.of(Defendant.builder()
+                        .type(DefendantType.ORGANISATION)
+                        .build(),
+                        Defendant.builder()
+                                .type(DefendantType.PERSON)
+                                .crn("something")
+                                .build()
+                ))
                 .build();
-        assertThat(courtCase.shouldMatchToOffender()).isTrue();
+        assertThat(courtCase.shouldMatchToOffender()).isFalse();
     }
 }
